Builder for port, bind address and resolver

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "tiny_dns"
+path = "src/lib.rs"
+
 [dependencies]
 tokio = { version = "1.37.0", features = ["full"] }
 rand = "0.8.5"
